# cuda-playground-legacy

./: .gitignore  CMakeLists.txt  README.md  setup.py
cuda_playground/: __init__.py
cuda_playground/ops/: dp.py  vb_matrices.py  vb_mm.py
include/: dp.h  thrust_allocator.h  vb_matrices.h
include/vbmm/: vbmm.h
src/: CMakeLists.txt  dp.cpp  pybind.cpp  vb_matrices.cu
src/vbmm/: vbmm.cu  vbmm_magma.cu  vbmm_pack.cu  vbmm_stream.cu  vbmm_vanilla.cu
tests/: test.py  test2.py  test_dp.py  test_dp2.py  test_group_by.py  test_group_by2.py
